cambio de datos

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     </header>
     
     <section id="educacion">
-        <h2>Educación y Experiencia</h2>
-        <p>Detalles sobre formación académica y experiencia laboral.</p>
+        <h2>Formacion Academica </h2>
+        <li>Estudiante de Ingeniería en Sistemas de Información
+            Universidad Nacional de Costa Rica (UNA) 2022 – Actualidad</li>
+        <li> Bachillerato en Educación Media
+            Colegio Liceo de Nicoya
+            Abril 2018
+             </li>
     </section>
 
     <section id="Idiomas">
